# c-plus-plus-for-creators-robotics-practical-9-7

./: CMakeLists.txt  README.md
include/: vector_3d.hpp
src/: main.cpp  vector_3d.cpp
